Fix minor issues to get the application working and add logger

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-flask
-flask-login
-flask-openid
-flask-mail
-flask-sqlalchemy
-sqlalchemy-migrate
-flask-whooshalchemy
-flask-wtf
-flask-babel
-guess_language
-flipflop
-coverage
+psycopg2
+SQLAlchemy
+Flask-SQLAlchemy
+Flask-Migrate
+Flask-Script
+uwsgi
+logger
